--- a/db/mongodb.conf
+++ b/db/mongodb.conf
@@ -9,7 +9,7 @@
 port=27017
 quiet=true
 dbpath=/data/db
-logpath = /data/log/mongod.log
+logpath=/data/log/mongod.log
 logappend=true
 journal=true
 
