--- a/db/mongodb.conf
+++ b/db/mongodb.conf
@@ -1,15 +1,19 @@
 # mongodb.conf
-
 # Where to store the data.
-
 # Note: if you run mongodb as a non-root user (recommended) you may
 # need to create and set permissions for this directory manually,
 # e.g., if the parent directory isn't mutable by the mongodb user.
 
-port=27017
-quiet=true
-dbpath=/data/db
-logpath=/data/db/mongod.log
-logappend=true
-journal=true
+net:
+  port: 27017
+storage:
+  smallFiles: true
+  dbPath: "/data/db"
+  journal:
+    enabled: true
+systemLog:
+  destination: file
+  path: "/data/db/mongodb.log"
+  logAppend: true
+  timeStampFormat: iso8601-utc
 
