set storageGlobalParams.smallFiles true

--- a/db/mongodb.conf
+++ b/db/mongodb.conf
@@ -4,10 +4,9 @@
 # need to create and set permissions for this directory manually,
 # e.g., if the parent directory isn't mutable by the mongodb user.
 
-net:
-  port: 27017
-storage:
+storageGlobalParams:
   smallFiles: true
+storage:
   dbPath: "/data/db"
   journal:
     enabled: true
@@ -16,4 +15,5 @@ systemLog:
   path: "/data/db/mongodb.log"
   logAppend: true
   timeStampFormat: iso8601-utc
-
+net:
+  port: 27017
