--- a/db/mongodb.conf
+++ b/db/mongodb.conf
@@ -4,12 +4,12 @@
 # need to create and set permissions for this directory manually,
 # e.g., if the parent directory isn't mutable by the mongodb user.
 
-storageGlobalParams:
-  smallFiles: true
 storage:
   dbPath: "/data/db"
   journal:
     enabled: true
+  mmapv1:
+    smallFiles: true
 systemLog:
   destination: file
   path: "/data/db/mongodb.log"
