--- a/db/mongodb.conf
+++ b/db/mongodb.conf
@@ -15,6 +15,8 @@ systemLog:
   path: "/data/db/mongodb.log"
   logAppend: true
   timeStampFormat: iso8601-utc
+security:
+  authorization: enabled
 net:
   bindIp: 127.0.0.1
   port: 27017
